Changes in the code to use locust in CLI

--- a/locust.conf
+++ b/locust.conf
@@ -2,3 +2,7 @@ locustfile = teste_suite.py
 host = https://serverest.dev
 csv = server_test
 logfile = server_log
+headless = true
+users = 10
+spawn-rate = 2
+run-time = 20
